# cf_motors

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  example_config.json  main.cpp
bridges/: CMakeLists.txt
bridges/include/bridges/can/: can.hpp  types.hpp
bridges/include/bridges/serial/: serial.hpp
bridges/src/can/: can.cpp
cmd/cli/: CMakeLists.txt  main.cpp
cmd/cli/include/: builder.hpp  command.hpp  options.hpp
cmd/cli/include/commands/: base.hpp  rotate.hpp  status.hpp
cmd/cli/src/: command.cpp  options.cpp
protocol/: CMakeLists.txt
protocol/include/protocol/can/: msg.hpp  rmdx.hpp
protocol/src/can/: rmdx.cpp
